--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,7 +1,7 @@
 .header-container {
     border-bottom: 1px solid var(--main-color);
     padding: 8px 10px;
-    overflow-x: scroll;
+    overflow-x: auto;
     position: fixed;
     top: 0px;
     background-color: white;
